# severance_snape

./: Cargo.toml  README.md  backend_bg.wasm  docs.md  index.html
.github/workflows/: web.yml
assets/: backend_bg-BXm2dph5.wasm  backend_bg-CIrE7k-T.wasm  backend_bg-FZGdOrRF.wasm  backend_bg.wasm  index-38804ddd.css  index-4eed42f8.css  index-59b6ce9e.css  index-69163731.css  index-767e9f29.css  index-7b40dd5e.css  index-94af35f4.css  index-9b7bdb7c.css  index-a3251abf.css  index-e1dd9128.css  index-e6276b64.css  index-e86cf9e1.css  index-ec96e64a.css  index-fa5d836d.css  index-ff3442e9.css  main-086c2a20.js  main-09f045fd.js  main-0ab15bf7.js  main-11b99b21.js  main-133ce644.js  main-15ba934c.js  main-16acdbe3.js  main-16d7f011.js  main-18e19ee7.js  main-19481aaa.js  main-198b1bd9.js  main-1e89f482.js  main-1f69cd01.js  main-244bdbf4.js  main-248c5461.js  main-251badc6.js  main-25d5fb54.js  main-27b40e4a.js  main-28bee2f4.js  main-2af961f9.js  main-2e39f873.js  (+103 more)
backend/: Cargo.toml
backend/src/: create.rs  disconnected.rs  fix_osm.rs  heatmap.rs  isochrone.rs  join_lines.rs  lib.rs  node_map.rs  osm.rs  parse_osm.rs  profiles.rs  route.rs  scores.rs  scrape.rs
backend/src/osm_reader/: mod.rs  pbf.rs  xml.rs
cli/: Cargo.toml
cli/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/assets/: input.osm  input.pbf
web/src/: About.svelte  App.svelte  ChangeSettings.svelte  CrossingsLayer.svelte  CrossingsMode.svelte  DebugMode.svelte  Directions.svelte  DisconnectionsMode.svelte  IsochroneMode.svelte  LayerControls.svelte  MapLoader.svelte  NavBar.svelte  NetworkLayer.svelte  OsmSeparateSidewalksMode.svelte  PickTravelMode.svelte  RouteLayer.svelte  RouteMode.svelte  ScoreLayer.svelte  ScoreMode.svelte  colors.ts  logic.ts  stores.ts  url.ts
web/src/common/: Modal.svelte  OverpassSelector.svelte  index.ts
web/src/title/: MapLoader.svelte  ProfilePicker.svelte  TitleMode.svelte
