[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geo = "0.30.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
graph = { git = "https://github.com/a-b-street/15m" }
log = "0.4.20"
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
petgraph = "0.7.1"
rstar = "0.12.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.0"
utils = { git = "https://github.com/a-b-street/utils", features = ["serde"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.64", features = ["console"] }
itertools = "0.14.0"

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
